Footer and header bar adjusted Layout About adjusted (same for logged in or not) Page "About" should be complete chat and participants formatted (scroll) Bar adjusted
To be fixed:
- Font
- Margin between body and header (?)

--- a/wesport/templates/add_field.html
+++ b/wesport/templates/add_field.html
@@ -1,6 +1,5 @@
-{% extends "layout_fullpage.html" %}
+{% extends "layout_login_register.html" %}
 {% block content %}
-        <div class="row justify-content-center">
             <div class="content-section col-10">
                 <form method="post" action="">
                     {{ form.hidden_tag() }}
@@ -51,5 +50,5 @@
                     </div>
                 </form>
             </div>
-        </div>
+
 {% endblock content %}
