--- a/wesport/templates/club.html
+++ b/wesport/templates/club.html
@@ -3,7 +3,7 @@
     <div class="media">
         <img class="rounded-circle account-img" src="{{ image_file }}">
         <div class="media-body">
-          <h2 class="account-heading">{{player.name}} {{player.surname}}</h2>
+          <h2 class="account-heading">{{club.name}}</h2>
           <p class="text-secondary">{{ user.email }}</p>
         </div>
     </div>
