--- a/wesport/templates/login.html
+++ b/wesport/templates/login.html
@@ -46,10 +46,12 @@
                 </form>
             </div>
         </div>
-            <div class="border-top pt-3">
+        <div class="row justify-content-center">
+            <div class="border-top pt-3 col-10">
                 <small class="text-muted">
                     Need An Account? <a class="ml-2" href="{{ url_for('main.home') }}">Sign Up Now</a>
                 </small>
             </div>
+        </div>
 
 {% endblock content %}
