--- a/wesport/templates/event_out.html
+++ b/wesport/templates/event_out.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'layout_fullpage.html' %}
 {% block content %}
     <div class="row">
         <div class="col-10">
@@ -84,11 +84,11 @@
       </div>
     </div>
     <div class="row">
-        <div class="col-4">
+        <div class="col-6">
             <p>Club: {{ club.name }}</p>
             <p>Field: {{ field.field_name }}</p>
         </div>
-        <div class="col-8">
+        <div class="col-6">
             <!--Google map-->
             <div id="mapevent" class="z-depth-1-half map-container-6" style="height: 200px">
               <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBCNB6dLAqToK9fbYsZKIHxreBLPGcn9so&q={{ club.lat }},{{ club.lon }}&zoom=16"
@@ -106,39 +106,3 @@
         </div>
     {% endfor %}
 {% endblock content %}
-{% block right_content %}
-    {% if player_status == 0 %}
-    {% else %}
-        <legend class="border-bottom mb-4">Event Chat</legend>
-        <div class="content-section-post">
-            {% for post in posts %}
-                <div class="comment">
-                    <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + post.image_file) }}>
-                    <small>{{ post.name }} {{ post.surname }} -- {{ post.date_posted.strftime("%H:%M - %d-%m") }}</small>
-                    <p>{{ post.content }}</p>
-                </div>
-            {% endfor %}
-        </div>
-        <div>
-            <form method="post" action="">
-                {{ form.hidden_tag() }}
-                <div class="form-group">
-                    {{ form.content.label(class="form-control-label") }}
-                    {% if form.content.errors %}
-                       {{ form.content(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.password.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.content(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {{ form.submit(class="btn btn-outline-info") }}
-                </div>
-            </form>
-        </div>
-    {% endif %}
-{% endblock %}
