--- a/wesport/templates/home.html
+++ b/wesport/templates/home.html
@@ -1,13 +1,12 @@
 {% extends "layout_home.html" %}
 {% block content %}
-    <div class="text-center" >
-        <h1><b>No more excuses not to play sports! </b></h1>
+    <div class="space" >
         <h2>Join our community! Play the sports you love and get to know new people!</h2>
         </div>
         <div class="text-center">
-        <h2 class="text-center">Check this out:</h2>
-        <video width="auto" autoplay controls>
-            <source src="../static/home_files/Wesports - Kickstarter.mp4">
-        </video>
+        <br>
+            <div class="video">
+                <iframe width="950" height="525" src="../static/home_files/WeSports v6.mp4" frameborder="0" allowfullscreen=""></iframe>
+            </div>
     </div>
 {% endblock content %}
