--- a/wesport/templates/club.html
+++ b/wesport/templates/club.html
@@ -1,10 +1,37 @@
 {% extends 'layout_fullpage.html' %}
 {% block content %}
-    <div class="media">
-        <img class="rounded-circle account-img" src="{{ image_file }}">
-        <div class="media-body">
-          <h2 class="account-heading">{{club.name}}</h2>
-          <p class="text-secondary">{{ user.email }}</p>
+    <div class="row justify-content-center">
+        <div class="content-section col-8" xmlns="http://www.w3.org/1999/html">
+              <div class="media">
+                <img class="rounded-circle account-img" src="{{ image_file }}">
+                <div class="media-body">
+                  <h2 class="account-heading">{{club.name}}</h2>
+                  <p class="text-secondary">{{ current_user.email }}</p>
+                </div>
+              </div>
+                <form method="POST" action="" enctype="multipart/form-data">
+                    <fieldset class="form-group">
+                        <legend class="border-bottom mb-4">Account Info</legend>
+                        <div class="form-group">
+                            <label class="form-control-label">City</label>
+                            <div class="form-control form-control-lg">
+                                {{ club.city }}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-control-label">Address</label>
+                            <div class="form-control form-control-lg">
+                                {{ club.address }}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-control-label">Phone Number</label>
+                            <div class="form-control form-control-lg">
+                                {{ club.phone_number }}
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
         </div>
     </div>
 {% endblock %}
