--- a/wesport/templates/reset_token.html
+++ b/wesport/templates/reset_token.html
@@ -1,6 +1,7 @@
-{% extends "layout.html" %}
+{% extends "layout_fullpage.html" %}
 {% block content %}
-        <div class="content-section">
+    <div class="row justify-content-center">
+        <div class="content-section col-10">
             <form method="post" action="">
                 {{ form.hidden_tag() }}
                 <fieldset class="form-group">
@@ -32,9 +33,12 @@
                         {% endif %}
                     </div>
                 </fieldset>
-                <div class="form-group">
-                    {{ form.submit(class="btn btn-outline-info") }}
+                <div class="row justify-content-center">
+                    <div class="form-group col-10">
+                        {{ form.submit(class="btn btn-outline-info") }}
+                    </div>
                 </div>
             </form>
         </div>
+    </div>
 {% endblock content %}
