--- a/wesport/templates/about.html
+++ b/wesport/templates/about.html
@@ -1,4 +1,53 @@
 {% extends "layout_fullpage.html" %}
 {% block content %}
-        <h1>About page inter</h1>
+    <div class="row" >
+        <div class="col-8">
+            <h1><b>Who we are</b></h1>
+            <h4>We are Abdullah Ashfaq, Anas Khalike, Alberto Molinar Roet, Tommaso Sacchi, Matteo Babini and Davide Vercellone:
+                6 students from the Polytechnic University of Turin who are passionate about Information Systems and, most of all (sorry professor!) Sports.
+                We came up with the idea of creating a platform that could allow students to get to know other people while playing the sports they love. It may not be easy for
+                anyone to change to a new city or a new country and make new friends, especially someone to play sports with. But do not panic,
+                we sorted it out for you: there is WeSports!
+            </h4>
+        </div>
+
+        <div class="col-4" style="max-width: 100%; margin-top: 60px;">
+            <div class="row">
+                <div class="col" style="padding-right: 5px;">
+                    <img src="../static/profile_pics/IMG_0930.jpg" class="about-image    img-thumbnail">
+                </div>
+                <div class="col" style="padding-right: 5px;">
+                     <img src="../static/profile_pics/IMG-20200317-WA0000.jpg" class="about-image img-thumbnail">
+                </div>
+                <div class="col" style="padding-right: 5px;">
+                    <img src="../static/profile_pics/albi.jpeg" class="about-image img-thumbnail">
+                </div>
+            </div>
+            <div class="row" style="margin-top: 20px;">
+                <div class="col" style="padding-right: 5px;">
+                    <img src="../static/profile_pics/tommi.jpeg" class="about-image img-thumbnail">
+                </div>
+                <div class="col" style="padding-right: 5px;">
+                    <img src="../static/profile_pics/42ffb4d5fc16d2c5.png" class="about-image img-thumbnail">
+                </div>
+                <div class="col" style="padding-right: 5px;">
+                    <img src="../static/profile_pics/matte.jpeg" class="about-image img-thumbnail">
+                </div>
+            </div>
+        </div>
+     </div>
+
+    <div class="row" style="margin-top: 10px;">
+        <div class="col">
+            <h1 style="margin-top: 10px;"><b>What is Wesports</b></h1>
+            <h2 style="margin-top: 10px;"><b>If you want to play</b></h2>
+            <h4>Wesports is a platform that allows a user to create an event and invite her/his friends to join it. When booking, it is possible
+            to see on the map the clubs close to you. Choose between them according to the sport you want to play, then choose the field, the date and time.
+            Then you can choose who to invite between your friends and off you go! Don't forget the stuff you need to play!</h4>
+            <h2 style="margin-top: 10px;"><b>If you want players to come to your club</b></h2>
+            <h4>WeSports can be used not just by players, but by clubs as well! As a matter of fact, it can be used as a club manager, showing the user's clubs and fields per club available
+            for different sports and the position of the club on the map, so that players can find clubs in their city and around them. Through WeSports, a club can increase its visibility and
+            be automatically managed through WeSports. No more messy calendars, names and phone numbers to remember, just one smart web page to have complete control of your club!</h4>
+        </div>
+    </div>
 {% endblock content %}
