changed video path

--- a/wesport/templates/home.html
+++ b/wesport/templates/home.html
@@ -6,7 +6,7 @@
         <div class="text-center">
         <br>
             <div class="video">
-                <iframe width="950" height="525" src="../static/home_files/WeSports v6.mp4" frameborder="0" allowfullscreen=""></iframe>
+                <iframe width="950" height="525" src="../static/home_files/WeSports-v6.mp4" frameborder="0" allowfullscreen=""></iframe>
             </div>
     </div>
 {% endblock content %}
