--- a/wesport/static/main.css
+++ b/wesport/static/main.css
@@ -133,6 +133,7 @@ element.style {
 .content-section-scroll {
     height: 250px;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .content-section-scroll-player {
