--- a/wesport/templates/club.html
+++ b/wesport/templates/club.html
@@ -6,7 +6,7 @@
                 <img class="rounded-circle account-img" src="{{ image_file }}">
                 <div class="media-body">
                   <h2 class="account-heading">{{club.name}}</h2>
-                  <p class="text-secondary">{{ current_user.email }}</p>
+                  <p class="text-secondary">{{ user.email }}</p>
                 </div>
               </div>
                 <form method="POST" action="" enctype="multipart/form-data">
